started working on ui added
